crates/ars-i18n/tests/ui/translate_duplicate_fallback.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en", fallback = "pt")]
enum BadText {
    #[translate(en = "Hello")]
    Hello,
}

fn main() {}
